--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "upperskill",
   "version": "1.0.0",
   "description": "ALX Final Project UpperSkill: is a user freindly platform decicated to students who want to upgrade their skills, upon first login, user is directed to pass a quizz to define their skills level, the result will analyzed using AI and recommand the best courses to continue grow skills.",
-  "main": "backend/upper.js",
+  "main": "backend/index.js",
   "scripts": {
-    "dev": "nodemon backend/upper.js",
-    "start": "node backend/upper.js"
+    "dev": "nodemon backend/index.js",
+    "start": "node backend/index.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.3",
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
