--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@
 mongosrv=mongodb+srv://racembouchn:PFeFqRXyvpa0OQ1Q@cluster0.x8f4u.mongodb.net/UpperSkill?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
 JWT_SECRET=uppersecret
+cloudinary_name=dampaoy5p
+cloudinary_key=818281975381599
+cloudinary_secret=unz4Al64YDI8czcLJ_Wc9EV_5lY
