Filled Landing Page with content, Fixed button hover not woeking

--- a/upperskill-front/.gitignore
+++ b/upperskill-front/.gitignore
@@ -12,7 +12,7 @@ dist
 dist-ssr
 *.local
 .env
-requestQuestio.mjs
+src/requestQuestions.mjs
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
