--- a/upperskill-front/.gitignore
+++ b/upperskill-front/.gitignore
@@ -13,6 +13,7 @@ dist-ssr
 *.local
 .env
 src/requestQuestions.mjs
+src/Login/LoginCopy.jsx
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
