--- a/upperskill-front/package.json
+++ b/upperskill-front/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
+    "react-hook-form": "^7.54.2",
     "react-router-dom": "^6.28.1"
   },
   "devDependencies": {
@@ -27,7 +28,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
-    "vite": "^6.0.5",
-    "react-error-overlay": "6.0.9" 
+    "react-error-overlay": "6.0.9",
+    "vite": "^6.0.5"
   }
 }
