--- a/upperskill-front/package.json
+++ b/upperskill-front/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.64.2",
     "dotenv": "^16.4.7",
     "openai": "^4.77.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.1",
     "react-router-dom": "^6.28.1"
   },
   "devDependencies": {
