--- a/upperskill-front/.gitignore
+++ b/upperskill-front/.gitignore
@@ -7,7 +7,7 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-../upperskill-backend
+../upperskill-back
 node_modules
 dist
 dist-ssr
@@ -25,3 +25,4 @@ src/Login/LoginCopy.jsx
 *.njsproj
 *.sln
 *.sw?
+upperskill-back/
